tests/reference/asr-asr_verify-60a446c.stderr
ASR verify pass error: The symbol table was found, but the symbol `sym` is not in it
 --> tests/errors/asr_verify.f90:3:4
  |
3 |    type(foo) :: c
  |    ^^^^^^^^^^^^^^ failed here

ASR verify pass error: Struct::m_derived_type 'foo' cannot point outside of its symbol table, owner: test
 --> tests/errors/asr_verify.f90:3:4
  |
3 |    type(foo) :: c
  |    ^^^^^^^^^^^^^^ failed here
